feat: quite option for init command